Fixed up one edge case where the animation didn't happen and the nav would just jump to the final state.

--- a/cofowp/wp-content/themes/cofodev/assets/sass/site/_header.scss
+++ b/cofowp/wp-content/themes/cofodev/assets/sass/site/_header.scss
@@ -78,7 +78,6 @@ header {
 }
 
 header {
-
 	a.nav-cart {
 		position: relative;
 	}
@@ -98,110 +97,124 @@ header {
 		padding: 0 6px;
 		border-radius: 50px;
 	}
+	
+	.fixed .nav-cart-counter {
+		top: 2px;
+		right: -28px;
+	}
+
+	.fixed.reset .nav-cart-counter {
+		top: -16px;
+	    right: -22px;
+	    transition: all 0.4s ease;
+	}
 }
+
 
 #site-navigation {
-	transition: top 0.4s ease;
 	top: -77px;
-}
+	
+	&.transition {
+		img.logo {
+			transition: width 0.4s ease;
+		}
 
-#site-navigation.fixed {
-	position: fixed;
-	z-index: 3;
-	background-color: $black;
-	padding: 1.5rem;
-	width: 100%;
-	top: 0;
-	// animation: fixnav 0.4s ease;
-
-	li {
-		@include font-size(1.3);
+		.nav-cart-counter {
+		    transition: all 0.4s ease;
+		}
 	}
 
-	li.nounderline img {
-		width: 50%;
-	}
-}
-
-#site-navigation.fixed.unfixed {
-	padding: 3.6rem 0;
-	transition: padding 0.4s ease;
-
-	li {
-		@include font-size(1.4);
-		transition: all 0.4s ease;
-	}
-
-	li.nounderline img {
+	&.fixed {
+		position: fixed;
+		z-index: 3;
+		background-color: $black;
+		padding: 1.5rem;
 		width: 100%;
-		transition: all 0.4s ease;
+		top: 0;
+		transition: padding 0.4s ease, top 0.4s ease;
+
+		img.logo {
+			width: 50%;
+		}
 	}
-}
+	
+	
+	&.fixed.reset {
+		padding: 3.6rem 0;
 
-header .fixed .nav-cart-counter {
-	top: 2px;
-	right: -28px;
-}
+		li {
+			@include font-size(1.4);
+			transition: all 0.4s ease;
+		}
 
-header .fixed.unfixed .nav-cart-counter {
-	top: -16px;
-    right: -22px;
-    transition: all 0.4s ease;
+		img.logo {
+			width: 100%;
+			transition: all 0.4s ease;
+		}
+	}
 }
 
 .mobile-nav {
 	display: none;
 	padding: 2.4rem 3.2rem 2.4rem 1.2rem;
 	top: -77px;
-	transition: top 0.4s ease;
-}
-
-.mobile-nav.fixed {
-	position: fixed;
-	z-index: 3;
-	background-color: $black;
-	padding: 0.8rem 3.5rem 0.8rem 1.5rem;
-	width: 100%;
-	top: 0;
-	// animation: fixnav 0.4s ease;
-
-	.nav-cart {
-		@include font-size(1.4);
-	}
-
-	img.logo {
-		margin: 0 auto;
-		width: 3.5rem;
-	}
 
 	.hamburger {
-		.patty, &:after, &:before {
-			width: 2.5rem;
+		width: 36px;
+	}
+
+	&.transition {
+		img.logo {
+			transition: width 0.4s ease;
+		}
+
+		.nav-cart-counter {
+		    transition: all 0.4s ease;
+		}
+	}
+	
+	&.fixed {
+		position: fixed;
+		z-index: 3;
+		background-color: $black;
+		padding: 0.8rem 3.5rem 0.8rem 1.5rem;
+		width: 100%;
+		top: 0;
+		transition: padding 0.4s ease, top 0.4s ease;
+
+		img.logo {
+			margin: 0 auto;
+			width: 3.5rem;
+		}
+
+		.hamburger {
+			.patty, &:after, &:before {
+				width: 2.5rem;
+				transition: all 0.4s ease;
+			}
+		}
+	}
+
+	&.fixed.reset {
+		padding: 2.4rem 3.2rem 2.4rem 1.2rem;
+		// transition: all 0.4s ease;
+
+		img.logo {
+			width: 6rem;
+			// transition: all 0.4s ease;
+		}
+
+		.hamburger {
+			.patty, &:after, &:before {
+				width: 3.6rem;
+				
+			}
 		}
 	}
 }
 
-.mobile-nav.fixed.unfixed {
-	padding: 2.4rem 3.2rem 2.4rem 1.2rem;
-	transition: all 0.4s ease;
 
-	.nav-cart {
-		@include font-size(1.6);
-		transition: all 0.4s ease;
-	}
 
-	img.logo {
-		width: 6rem;
-		transition: all 0.4s ease;
-	}
-
-	.hamburger {
-		.patty, &:after, &:before {
-			width: 3.6rem;
-			transition: all 0.4s ease;
-		}
-	}
-}
 
 @keyframes slidedown {
 	0%   { opacity: 0; transform: translateY(-8px); }
@@ -220,10 +233,6 @@ header .fixed.unfixed .nav-cart-counter {
   100%   { opacity: 1; transform: translateY(0); }
 }
 
-@keyframes fixnav {
-	0% { opacity: 0;}
-	100% { opacity: 1; }
-}
 
 @media (max-width: 1023px) {
 	header {
